# seL4cp-workshop

./: .gitignore  CMakeLists.txt  Makefile  README.md
instructions/: seL4cp-workshop-dry-run.mht
rpi3b/: boot.scr  config.txt
sdk/board/qemu_arm_virt/debug/elf/: loader.elf  monitor.elf  sel4.elf
sdk/board/qemu_arm_virt/debug/include/kernel/: gen_config.h
sdk/board/qemu_arm_virt/debug/include/sel4/: shared_types_gen.h
sdk/board/qemu_arm_virt/example/hello/: Makefile
sdk/board/qemu_arm_virt/release/elf/: loader.elf  monitor.elf  sel4.elf
sdk/board/qemu_arm_virt/release/include/kernel/: gen_config.h
sdk/board/qemu_arm_virt/release/include/sel4/: shared_types_gen.h
sdk/board/rpi3b/debug/elf/: loader.elf  monitor.elf  sel4.elf
sdk/board/rpi3b/debug/include/kernel/: gen_config.h
sdk/board/rpi3b/debug/include/sel4/: shared_types_gen.h
sdk/board/rpi3b/release/elf/: loader.elf  monitor.elf  sel4.elf
sdk/board/rpi3b/release/include/kernel/: gen_config.h
sdk/board/rpi3b/release/include/sel4/: shared_types_gen.h
sdk/board/tqma8xqp1gb/debug/elf/: loader.elf  monitor.elf  sel4.elf
sdk/board/tqma8xqp1gb/debug/include/kernel/: gen_config.h
sdk/board/tqma8xqp1gb/debug/include/sel4/: shared_types_gen.h  syscall.h
sdk/board/tqma8xqp1gb/release/elf/: loader.elf  monitor.elf  sel4.elf
sdk/board/zcu102/debug/elf/: loader.elf  monitor.elf  sel4.elf
sdk/board/zcu102/release/elf/: loader.elf  monitor.elf  sel4.elf
workshop/: CMakeLists.txt  Makefile  client.c  serial_server.c  wordle.system  wordle_server.c
workshop/include/: dictionary.h
(+18 files in other folders)
